syntax = "proto3";

package contacts;

service ContactsService {
  // Add a new contact
  rpc AddContact (Contact) returns (AddContactResponse) {}

  // Get a contact by ID
  rpc GetContact (GetContactRequest) returns (Contact) {}

  // Update an existing contact
  rpc UpdateContact (Contact) returns (google.protobuf.Empty) {}

  // Delete a contact by ID
  rpc DeleteContact (DeleteContactRequest) returns (google.protobuf.Empty) {}

  // List all contacts
  rpc ListContacts (google.protobuf.Empty) returns (stream Contact) {}
}

message Contact {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

message GetContactRequest {
  string id = 1;
}

message DeleteContactRequest {
  string id = 1;
}

message AddContactResponse {
  string id = 1;
}
